--- a/moduuli1/html/teht.1.html
+++ b/moduuli1/html/teht.1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Tehtävä 1</title>
-    <script src="../javascript/teht.1.js" defer>  </script>
+    <script src="../javascript/teht.1.js" defer></script>
 </head>
 <body>
-    <h3> Tehtävä 1 </h3>
-
+<h1>Tehtävä 1</h1>
+<h3 class=T1 ></h3>
 </body>
 </html>
