--- a/moduuli1/html/teht.8.html
+++ b/moduuli1/html/teht.8.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-    <h3> Karkausvuodet </h3>'
+    <h3> Karkausvuodet </h3>
 
-    // Javascript-koodi tulostaa alla olevaan lauseeseen
-    <p id="tulosAlue"></p>
+
+    <h2 class = T8 ></h2>
 
 </body>
 </html>
