--- a/moduuli1/html/teht.1.html
+++ b/moduuli1/html/teht.1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tehtävä 1</title>
-    <script src="../javascript/teht.1.js" defer></script>
+    <script src="../JS_files/teht.1.js" defer></script>
 </head>
 <body>
 <h1>Tehtävä 1</h1>
