--- a/moduuli1/html/teht.2.html
+++ b/moduuli1/html/teht.2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tehtävä 2</title>
-  <script src="../javascript/teht.2.js" defer>  </script>
+  <script src="../JS_files/teht.2.js" defer>  </script>
 </head>
 <body>
 <h1>Tehtävä 2</h1>
