--- a/moduuli1/html/teht.3.html
+++ b/moduuli1/html/teht.3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tehtävä 3</title>
-    <script src="../javascript/teht.3.js" defer>  </script>
+    <script src="../JS_files/teht.3.js" defer>  </script>
 </head>
 <body>
 <h1> Tehtävä 3 </h1>
