--- a/moduuli1/html/teht.4.html
+++ b/moduuli1/html/teht.4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tehtävä 4</title>
-  <script src = "../javascript/teht.4.js" defer ></script>
+  <script src = "../JS_files/teht.4.js" defer ></script>
 </head>
 <body>
 <h1> Tehtävä 4 </h1>
