--- a/moduuli1/html/teht.7.html
+++ b/moduuli1/html/teht.7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tehtävä 7</title>
-  <script src = "../javascript/teht.7.js" defer ></script>
+  <script src = "../JS_files/teht.7.js" defer ></script>
 </head>
 <body>
 <h1>Tehtävä 7</h1>
