--- a/moduuli1/html/teht.9.html
+++ b/moduuli1/html/teht.9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tehtävä 8</title>
-  <script src="../javascript/teht.9.js" defer></script>
+  <script src="../JS_files/teht.9.js" defer></script>
 </head>
 <body>
 
