--- a/moduuli1/html/teht.5.html
+++ b/moduuli1/html/teht.5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tehtävä 5</title>
-    <script src = "../javascript/teht.5.js" defer ></script>
+    <script src = "../JS_files/teht.5.js" defer ></script>
 </head>
 <body>
 <h1>Tehtävä 5</h1>
