--- a/moduuli1/html/teht.6.html
+++ b/moduuli1/html/teht.6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tehtävä 6</title>
-  <script src = "../javascript/teht.6.js" defer ></script>
+  <script src = "../JS_files/teht.6.js" defer ></script>
 </head>
 <body>
 <h1>Tehtävä 6</h1>
