--- a/moduuli4/4teht.3/4teht.3.html
+++ b/moduuli4/4teht.3/4teht.3.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Tehtävä 2</title>
-  <script src="../4teht.2/4teht.2.js" defer ></script>
+  <meta charset="UTF-8">
+  <title>Tehtävä 3</title>
+  <script src="../4teht.3/4teht.3.js" defer ></script>
 </head>
 <body>
-<hi>Tehtävä 2</hi>
+<hi>Tehtävä 3</hi>
 <form action="https://api.tvmaze.com/search/shows" id="tv">
   <input id="query" name="q" type="text">
   <input type="submit" value="Search">
 </form>
+
+<div id="results"></div>
 
 </body>
 </html>
